added styles to the second block

--- a/index.html
+++ b/index.html
@@ -25,11 +25,38 @@
         </ul>
       </nav>
       <button class="header__button" type="submit">Бронировать</button>
-
     </header>
-
+    <main>
+      <section class="first site-activit">
+        <div class="block_meritt_thomas">
+          <div class="first__function">
+            <h2 class="first__title">Аренда загородного <br />дома для отдыха</h2>
+            <p class="first__content">
+              Самые выгодные предложения по аренде коттеджей
+              и загородных домов в Москве и области
+            </p>
+            <button class="first__button">Бронирование</button>
+          </div>
+        </div>
+        <div class="first__meritt__thomas">
+          <img
+          class="first_part_of_the_house"
+            alt="левая часть дома"
+            src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 1.png"
+          />
+          <img
+          class="second_part_of_the_house"
+            alt="середина дома"
+            src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 2.png"
+          />
+          <img
+          class="third_part_of_the_house "
+            alt="правая часть дома"
+            src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 3.png"
+          />
+        </div>
+      </section>
+    </main>
   </body>
-  <footer>
-
-  </footer>
+  <footer></footer>
 </html>
