--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="first site-activit">
         <div class="block_meritt_thomas">
           <div class="first__function">
-            <h2 class="first__title">Аренда загородного <br />дома для отдыха</h2>
+            <h1 class="first__title">Аренда загородного <br />дома для отдыха</h1>
             <p class="first__content">
               Самые выгодные предложения по аренде коттеджей
               и загородных домов в Москве и области
@@ -55,6 +55,23 @@
             src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 3.png"
           />
         </div>
+      </section>
+      <section class="about__us">
+          <img
+          class="about__us__img"
+          src="./images/image 13.png"
+          alt="домик в лесу"
+          >
+            <div class="about__us__block">
+              <h2 class="about__us__title about__us__position ">Уютный двухэтажный дом в норвежском стиле</h2>
+              <p class="about__us__content about__us__position ">
+                Просторные коттеджи с видом на лес полностью укомплектованы: кондиционер,
+                холодильник, посудомоечная машина, газовая плита, духовка, микроволновая печь,
+                чайник, набор посуды и столовых приборов. В каждом коттедже: стиральная машина,
+                гладильная станция, сушилка для белья, фен.
+              </p>
+              <button class="about__us__button about__us__position">Подробнее</button>
+            </div>
       </section>
     </main>
   </body>
