--- a/index.html
+++ b/index.html
@@ -30,48 +30,79 @@
       <section class="first site-activit">
         <div class="block_meritt_thomas">
           <div class="first__function">
-            <h1 class="first__title">Аренда загородного <br />дома для отдыха</h1>
+            <h1 class="first__title">
+              Аренда загородного <br />дома для отдыха
+            </h1>
             <p class="first__content">
-              Самые выгодные предложения по аренде коттеджей
-              и загородных домов в Москве и области
+              Самые выгодные предложения по аренде коттеджей и загородных домов
+              в Москве и области
             </p>
             <button class="first__button">Бронирование</button>
           </div>
         </div>
         <div class="first__meritt__thomas">
           <img
-          class="first_part_of_the_house"
+            class="first_part_of_the_house"
             alt="левая часть дома"
             src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 1.png"
           />
           <img
-          class="second_part_of_the_house"
+            class="second_part_of_the_house"
             alt="середина дома"
             src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 2.png"
           />
           <img
-          class="third_part_of_the_house "
+            class="third_part_of_the_house"
             alt="правая часть дома"
             src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 3.png"
           />
         </div>
       </section>
       <section class="about__us">
-          <img
+        <img
           class="about__us__img"
           src="./images/image 13.png"
           alt="домик в лесу"
-          >
-            <div class="about__us__block">
-              <h2 class="about__us__title about__us__position ">Уютный двухэтажный дом в норвежском стиле</h2>
-              <p class="about__us__content about__us__position ">
-                Просторные коттеджи с видом на лес полностью укомплектованы: кондиционер,
-                холодильник, посудомоечная машина, газовая плита, духовка, микроволновая печь,
-                чайник, набор посуды и столовых приборов. В каждом коттедже: стиральная машина,
-                гладильная станция, сушилка для белья, фен.
-              </p>
-              <button class="about__us__button about__us__position">Подробнее</button>
-            </div>
+        />
+        <div class="about__us__block">
+          <h2 class="about__us__title about__us__position">
+            Уютный двухэтажный дом в норвежском стиле
+          </h2>
+          <p class="about__us__content about__us__position">
+            Просторные коттеджи с видом на лес полностью укомплектованы:
+            кондиционер, холодильник, посудомоечная машина, газовая плита,
+            духовка, микроволновая печь, чайник, набор посуды и столовых
+            приборов. В каждом коттедже: стиральная машина, гладильная станция,
+            сушилка для белья, фен.
+          </p>
+          <button class="about__us__button about__us__position">
+            Подробнее
+          </button>
+        </div>
+      </section>
+      <section class="benifit">
+        <div class="benifit__block_1">
+          <h3 class="benifit__title">Активности</h3>
+          <p class="benifit__content">
+            К вашим услугам наши прекрасные повора, которые приготовят вкусную
+            еду по составленную для вас персональному меню.Также вы сможете
+            воспользоваться СПА, тренажерным залом и прочими услугами,
+            доступными на нашей территории.
+          </p>
+          <img class="benifit__img" src="./images/image 21.png" alt="Банкет" />
+        </div>
+        <div>
+          <img
+            class="benifit__img"
+            src="./images/image 18.jpg"
+            alt="фотография бобового салата"
+          />
+          <h3 class="benifit__title">100% Натуральные продукты</h3>
+          <p class="benifit__content">
+            При приготовлении наших блюд мы используем только свежие, полезные,
+            натуральные продукты.
+          </p>
+        </div>
       </section>
     </main>
   </body>
