added styles for block 4

--- a/index.html
+++ b/index.html
@@ -82,26 +82,32 @@
       </section>
       <section class="benifit">
         <div class="benifit__block_1">
-          <h3 class="benifit__title">Активности</h3>
-          <p class="benifit__content">
-            К вашим услугам наши прекрасные повора, которые приготовят вкусную
-            еду по составленную для вас персональному меню.Также вы сможете
-            воспользоваться СПА, тренажерным залом и прочими услугами,
-            доступными на нашей территории.
-          </p>
+          <div class="benifit__block_interior_1">
+            <h3 class="benifit__title">Активности</h3>
+            <p class="benifit__content">
+              К вашим услугам наши прекрасные повора, которые приготовят вкусную
+              еду по составленную для вас персональному меню.Также вы сможете
+              воспользоваться СПА, тренажерным залом и прочими услугами,
+              доступными на нашей территории.
+            </p>
+          </div>
           <img class="benifit__img" src="./images/image 21.png" alt="Банкет" />
         </div>
-        <div>
-          <img
-            class="benifit__img"
-            src="./images/image 18.jpg"
-            alt="фотография бобового салата"
-          />
-          <h3 class="benifit__title">100% Натуральные продукты</h3>
-          <p class="benifit__content">
-            При приготовлении наших блюд мы используем только свежие, полезные,
-            натуральные продукты.
-          </p>
+        <div class="benifit__block_2">
+            <img
+              class="benifit__img"
+              src="./images/image 18.jpg"
+              alt="фотография бобового салата"
+            />
+          <div class="benifit__content_interior">
+            <h3 class="benifit__title">
+              100% Натуральные продукты
+            </h3>
+            <p class="benifit__content">
+              При приготовлении наших блюд мы используем только свежие,
+              полезные, натуральные продукты.
+            </p>
+          </div>
         </div>
       </section>
     </main>
