made up 5 block + styles

--- a/index.html
+++ b/index.html
@@ -94,20 +94,45 @@
           <img class="benifit__img" src="./images/image 21.png" alt="Банкет" />
         </div>
         <div class="benifit__block_2">
-            <img
-              class="benifit__img"
-              src="./images/image 18.jpg"
-              alt="фотография бобового салата"
-            />
+          <img
+            class="benifit__img"
+            src="./images/image 18.jpg"
+            alt="фотография бобового салата"
+          />
           <div class="benifit__content_interior">
-            <h3 class="benifit__title">
-              100% Натуральные продукты
-            </h3>
+            <h3 class="benifit__title">100% Натуральные продукты</h3>
             <p class="benifit__content">
               При приготовлении наших блюд мы используем только свежие,
               полезные, натуральные продукты.
             </p>
           </div>
+        </div>
+      </section>
+      <section class="rectangle">
+        <div>
+          <h3 class="rectangle__title">Наши интерьеры</h3>
+          <img
+          class="rectangle__image_1"
+          src="./images/image 22.jpg"
+          alt="гостиная номер 1"
+        />
+        </div>
+        <div class="rectangle__image__interiro">
+          <img
+          class="rectangle__image_2-3-4"
+          src="./images/image 25.png"
+          alt="гостиная номер 2"
+        />
+        <img
+          class="rectangle__image_2-3-4"
+          src="./images/image 26.png"
+          alt="гостиная номер 3"
+        />
+        <img
+          class="rectangle__image_2-3-4"
+          src="./images/image 27.png"
+          alt="гостиная номер 4"
+        />
         </div>
       </section>
     </main>
