made up a hat 6 blocks + styles

--- a/index.html
+++ b/index.html
@@ -112,28 +112,36 @@
         <div>
           <h3 class="rectangle__title">Наши интерьеры</h3>
           <img
-          class="rectangle__image_1"
-          src="./images/image 22.jpg"
-          alt="гостиная номер 1"
-        />
+            class="rectangle__image_1"
+            src="./images/image 22.jpg"
+            alt="гостиная номер 1"
+          />
         </div>
         <div class="rectangle__image__interiro">
           <img
-          class="rectangle__image_2-3-4"
-          src="./images/image 25.png"
-          alt="гостиная номер 2"
-        />
-        <img
-          class="rectangle__image_2-3-4"
-          src="./images/image 26.png"
-          alt="гостиная номер 3"
-        />
-        <img
-          class="rectangle__image_2-3-4"
-          src="./images/image 27.png"
-          alt="гостиная номер 4"
-        />
+            class="rectangle__image_2-3-4"
+            src="./images/image 25.png"
+            alt="гостиная номер 2"
+          />
+          <img
+            class="rectangle__image_2-3-4"
+            src="./images/image 26.png"
+            alt="гостиная номер 3"
+          />
+          <img
+            class="rectangle__image_2-3-4"
+            src="./images/image 27.png"
+            alt="гостиная номер 4"
+          />
         </div>
+      </section>
+      <section class="reservation">
+        <h3 class="reservation__title">Выберите ваш дом</h3>
+        <p class="reservation__content">
+          У нас есть дома для любых мероприятий. Для большой компании <br />у
+          нас есть двухэтажный дом на самом краю леса.
+        </p>
+        <button class="reservation__button">Подробнее</button>
       </section>
     </main>
   </body>
