added html code to block 6

--- a/index.html
+++ b/index.html
@@ -142,6 +142,33 @@
           нас есть двухэтажный дом на самом краю леса.
         </p>
         <button class="reservation__button">Подробнее</button>
+        <div>
+          <img src="./images/image 11.png" alt="Маленький деревянный дом" />
+          <h3>Маленький домик</h3>
+          <p>Уютный коттедж с 3 спальнями и бильярдом.</p>
+          <a href="#0">Подробнее</a>
+        </div>
+        <div>
+          <img src="./images/image 10.png" alt=" Большой деревянный дом" />
+          <h3>Большой дом</h3>
+          <p>
+            266 кв.м. с тремя спальнями, четырьмя санузлами, камином и
+            бильярдом.
+          </p>
+          <a href="#0">Подробнее</a>
+        </div>
+        <div>
+          <img
+            src="./images/ian-keefe-OgcJIKRnRC8-unsplash 1.png"
+            alt="двухэтажный деревянный дом"
+          />
+          <h3>Двухэтажный дом</h3>
+          <p>
+            Коттедж с сауной, четырьмя спальнями и бильярдом. Идеально подойдет
+            для полноценного празднования нового года.
+          </p>
+          <a href="#0">Подробнее</a>
+        </div>
       </section>
     </main>
   </body>
