--- a/index.html
+++ b/index.html
@@ -142,32 +142,60 @@
           нас есть двухэтажный дом на самом краю леса.
         </p>
         <button class="reservation__button">Подробнее</button>
-        <div>
-          <img src="./images/image 11.png" alt="Маленький деревянный дом" />
-          <h3>Маленький домик</h3>
-          <p>Уютный коттедж с 3 спальнями и бильярдом.</p>
-          <a href="#0">Подробнее</a>
-        </div>
-        <div>
-          <img src="./images/image 10.png" alt=" Большой деревянный дом" />
-          <h3>Большой дом</h3>
-          <p>
-            266 кв.м. с тремя спальнями, четырьмя санузлами, камином и
-            бильярдом.
-          </p>
-          <a href="#0">Подробнее</a>
-        </div>
-        <div>
-          <img
-            src="./images/ian-keefe-OgcJIKRnRC8-unsplash 1.png"
-            alt="двухэтажный деревянный дом"
-          />
-          <h3>Двухэтажный дом</h3>
-          <p>
-            Коттедж с сауной, четырьмя спальнями и бильярдом. Идеально подойдет
-            для полноценного празднования нового года.
-          </p>
-          <a href="#0">Подробнее</a>
+        <div class="reservation__block__house">
+          <div>
+            <img
+              class="reservation__image__house"
+              src="./images/image 11.png"
+              alt="Маленький деревянный дом"
+            />
+            <h3 class="reservation__title__house">Маленький домик</h3>
+            <p class="reservation__content__house">
+              Уютный коттедж с 3 спальнями и бильярдом.
+            </p>
+            <a class="reservation__button__house" href="#0">Подробнее</a>
+            <img
+              class="reservation__arrow"
+              src="./images/Arrow_Right.svg"
+              alt="стрелочка"
+            />
+          </div>
+          <div>
+            <img
+              class="reservation__image__house"
+              src="./images/image 10.png"
+              alt=" Большой деревянный дом"
+            />
+            <h3 class="reservation__title__house">Большой дом</h3>
+            <p class="reservation__content__house">
+              266 кв.м. с тремя спальнями, четырьмя санузлами, камином и
+              бильярдом.
+            </p>
+            <a class="reservation__button__house" href="#0">Подробнее</a>
+            <img
+              class="reservation__arrow"
+              src="./images/Arrow_Right.svg"
+              alt="стрелочка"
+            />
+          </div>
+          <div>
+            <img
+              class="reservation__image__house"
+              src="./images/ian-keefe-OgcJIKRnRC8-unsplash 1.png"
+              alt="двухэтажный деревянный дом"
+            />
+            <h3 class="reservation__title__house">Двухэтажный дом</h3>
+            <p class="reservation__content__house">
+              Коттедж с сауной, четырьмя спальнями и бильярдом. Идеально
+              подойдет для полноценного празднования нового года.
+            </p>
+            <a class="reservation__button__house" href="#0">Подробнее</a>
+            <img
+              class="reservation__arrow"
+              src="./images/Arrow_Right.svg"
+              alt="стрелочка"
+            />
+          </div>
         </div>
       </section>
     </main>
