work with html and css

--- a/index.html
+++ b/index.html
@@ -189,15 +189,31 @@
               Коттедж с сауной, четырьмя спальнями и бильярдом. Идеально
               подойдет для полноценного празднования нового года.
             </p>
-            <a class="reservation__button__house" href="#0">Подробнее</a>
+            <a class="reservation__button__house last__button" href="#0"
+              >Подробнее</a
+            >
             <img
               class="reservation__arrow"
               src="./images/Arrow_Right.svg"
               alt="стрелочка"
-
             />
           </div>
         </div>
+      </section>
+      <section class="photo__block">
+        <h3 class="photo__block-title">Отзывы</h3>
+        <img
+          class="photo__img"
+          src="./images/Ellipse 1.png"
+          alt="фотография человека"
+        />
+        <p class="photo__block-content">
+          Мы очень долго искали коттедж, чтобы отметить день рождение. Все очень
+          понравилось. Комфортно, уютно,не дом, а сказка. Все очень понравилось,
+          хочется приехать еще сюда не один раз
+        </p>
+        <h6 class="name__title">Ирина Иванова</h6>
+        <img class="img__points" src="./images/Group 8.svg" alt="точки" />
       </section>
     </main>
   </body>
