continued work on html and css

--- a/index.html
+++ b/index.html
@@ -217,5 +217,45 @@
       </section>
     </main>
   </body>
-  <footer></footer>
+  <footer>
+    <div class="block__footer">
+      <div class="block__footer-hotel ">
+        <h3 class="block__footer-title">HotelBooking</h3>
+        <p class="block__footer-content">
+          Загородный отдых с замечательными видами
+        </p>
+        <img
+          class="block__footer-img"
+          src="./images/twitter.svg"
+          alt="значок твитера"
+        />
+        <img
+          class="block__footer-img"
+          src="./images/Layer_11.svg"
+          alt="значок контакта"
+        />
+      </div>
+      <div class="subblock__footer ">
+        <h5 class="block__footer-subtitles">Дома</h5>
+        <p class="block__footer-content_2">Маленькие домики</p>
+        <p class="block__footer-content_2">Большой дом</p>
+        <p class="block__footer-content_2">Двухэтажный дом</p>
+      </div>
+      <div class="subblock__footer">
+        <h5 class="block__footer-subtitles">Бронирование</h5>
+        <p class="block__footer-content_2">Оформление</p>
+        <p class="block__footer-content_2">Оплата</p>
+      </div>
+      <div class="subblock__footer">
+        <h5 class="block__footer-subtitles">Контакты</h5>
+        <address class="block__footer-content_2">
+          <a class="subblock__footer">8-800-555-35-35</a>
+          <br /><a class="subblock__footer">email@yandex.ru</a>
+          <br>Деревня Кимжа, </br>Архангельская область</p>
+        </address>
+      </div>
+    </div>
+      </div>
+    </div>
+  </footer>
 </html>
