--- a/index.html
+++ b/index.html
@@ -4,258 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HotelBooking</title>
+    <title>Карты подскажут</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body>
-    <header class="header">
-      <h2 class="header__title">HotelBooking</h2>
-      <nav class="header__menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active" href="#0">Дома</a>
-          </li>
-          <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active" href="#0">Бронирование</a>
-          </li>
-          <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active" href="#0">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <button class="header__button" type="submit">Бронировать</button>
-    </header>
-    <main>
-      <section class="first site-activit">
-        <div class="block_meritt_thomas">
-          <div class="first__function">
-            <h1 class="first__title">
-              Аренда загородного <br />дома для отдыха
-            </h1>
-            <p class="first__content">
-              Самые выгодные предложения по аренде коттеджей и загородных домов
-              в Москве и области
-            </p>
-            <button class="first__button">Бронирование</button>
-          </div>
-        </div>
-        <div class="first__meritt__thomas">
-          <img
-            class="first_part_of_the_house"
-            alt="левая часть дома"
-            src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 1.png"
-          />
-          <img
-            class="second_part_of_the_house"
-            alt="середина дома"
-            src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 2.png"
-          />
-          <img
-            class="third_part_of_the_house"
-            alt="правая часть дома"
-            src="./images/meritt-thomas-u-Hb93V6IWI-unsplash 3.png"
-          />
-        </div>
-      </section>
-      <section class="about__us">
-        <img
-          class="about__us__img"
-          src="./images/image 13.png"
-          alt="домик в лесу"
-        />
-        <div class="about__us__block">
-          <h2 class="about__us__title about__us__position">
-            Уютный двухэтажный дом в норвежском стиле
-          </h2>
-          <p class="about__us__content about__us__position">
-            Просторные коттеджи с видом на лес полностью укомплектованы:
-            кондиционер, холодильник, посудомоечная машина, газовая плита,
-            духовка, микроволновая печь, чайник, набор посуды и столовых
-            приборов. В каждом коттедже: стиральная машина, гладильная станция,
-            сушилка для белья, фен.
-          </p>
-          <button class="about__us__button about__us__position">
-            Подробнее
-          </button>
-        </div>
-      </section>
-      <section class="benifit">
-        <div class="benifit__block_1">
-          <div class="benifit__block_interior_1">
-            <h3 class="benifit__title">Активности</h3>
-            <p class="benifit__content">
-              К вашим услугам наши прекрасные повора, которые приготовят вкусную
-              еду по составленную для вас персональному меню.Также вы сможете
-              воспользоваться СПА, тренажерным залом и прочими услугами,
-              доступными на нашей территории.
-            </p>
-          </div>
-          <img class="benifit__img" src="./images/image 21.png" alt="Банкет" />
-        </div>
-        <div class="benifit__block_2">
-          <img
-            class="benifit__img"
-            src="./images/image 18.jpg"
-            alt="фотография бобового салата"
-          />
-          <div class="benifit__content_interior">
-            <h3 class="benifit__title">100% Натуральные продукты</h3>
-            <p class="benifit__content">
-              При приготовлении наших блюд мы используем только свежие,
-              полезные, натуральные продукты.
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="rectangle">
-        <div>
-          <h3 class="rectangle__title">Наши интерьеры</h3>
-          <img
-            class="rectangle__image_1"
-            src="./images/image 22.jpg"
-            alt="гостиная номер 1"
-          />
-        </div>
-        <div class="rectangle__image__interiro">
-          <img
-            class="rectangle__image_2-3-4"
-            src="./images/image 25.png"
-            alt="гостиная номер 2"
-          />
-          <img
-            class="rectangle__image_2-3-4"
-            src="./images/image 26.png"
-            alt="гостиная номер 3"
-          />
-          <img
-            class="rectangle__image_2-3-4"
-            src="./images/image 27.png"
-            alt="гостиная номер 4"
-          />
-        </div>
-      </section>
-      <section class="reservation">
-        <h3 class="reservation__title">Выберите ваш дом</h3>
-        <p class="reservation__content">
-          У нас есть дома для любых мероприятий. Для большой компании <br />у
-          нас есть двухэтажный дом на самом краю леса.
-        </p>
-        <button class="reservation__button">Подробнее</button>
-        <div class="reservation__block__house">
-          <div>
-            <img
-              class="reservation__image__house"
-              src="./images/image 11.png"
-              alt="Маленький деревянный дом"
-            />
-            <h3 class="reservation__title__house">Маленький домик</h3>
-            <p class="reservation__content__house">
-              Уютный коттедж с 3 спальнями и бильярдом.
-            </p>
-            <a class="reservation__button__house" href="#0">Подробнее</a>
-            <img
-              class="reservation__arrow"
-              src="./images/Arrow_Right.svg"
-              alt="стрелочка"
-            />
-          </div>
-          <div>
-            <img
-              class="reservation__image__house"
-              src="./images/image 10.png"
-              alt=" Большой деревянный дом"
-            />
-            <h3 class="reservation__title__house">Большой дом</h3>
-            <p class="reservation__content__house">
-              266 кв.м. с тремя спальнями, четырьмя санузлами, камином и
-              бильярдом.
-            </p>
-            <a class="reservation__button__house" href="#0">Подробнее</a>
-            <img
-              class="reservation__arrow"
-              src="./images/Arrow_Right.svg"
-              alt="стрелочка"
-            />
-          </div>
-          <div>
-            <img
-              class="reservation__image__house"
-              src="./images/ian-keefe-OgcJIKRnRC8-unsplash 1.png"
-              alt="двухэтажный деревянный дом"
-            />
-            <h3 class="reservation__title__house">Двухэтажный дом</h3>
-            <p class="reservation__content__house_double_decker">
-              Коттедж с сауной, четырьмя спальнями и бильярдом. Идеально
-              подойдет для полноценного празднования нового года.
-            </p>
-            <a class="reservation__button__house last__button" href="#0"
-              >Подробнее</a
-            >
-            <img
-              class="reservation__arrow"
-              src="./images/Arrow_Right.svg"
-              alt="стрелочка"
-            />
-          </div>
-        </div>
-      </section>
-      <section class="photo__block">
-        <h3 class="photo__block-title">Отзывы</h3>
-        <img
-          class="photo__img"
-          src="./images/Ellipse 1.png"
-          alt="фотография человека"
-        />
-        <p class="photo__block-content">
-          Мы очень долго искали коттедж, чтобы отметить день рождение. Все очень
-          понравилось. Комфортно, уютно,не дом, а сказка. Все очень понравилось,
-          хочется приехать еще сюда не один раз
-        </p>
-        <h6 class="name__title">Ирина Иванова</h6>
-        <img class="img__points" src="./images/Group 8.svg" alt="точки" />
-      </section>
-    </main>
+  <body class="page theme_dark">
+    <header class="header"></header>
+    <main class="content content-section"></main>
+    <footer class="footer"></footer>
+
+    <!-- Раскомментируйте строчку ниже, когда вёрстка будет готова. Если вы назвали все классы. как нужно, переключатель темы будет работать -->
+    <!-- <script src="./scripts/theme-changer.js"></script> -->
   </body>
-  <footer>
-    <div class="block__footer">
-      <div class="block__footer-hotel ">
-        <h3 class="block__footer-title">HotelBooking</h3>
-        <p class="block__footer-content">
-          Загородный отдых с замечательными видами
-        </p>
-        <img
-          class="block__footer-img"
-          src="./images/twitter.svg"
-          alt="значок твитера"
-        />
-        <img
-          class="block__footer-img"
-          src="./images/Layer_11.svg"
-          alt="значок контакта"
-        />
-      </div>
-      <div class="subblock__footer ">
-        <h5 class="block__footer-subtitles">Дома</h5>
-        <p class="block__footer-content_2">Маленькие домики</p>
-        <p class="block__footer-content_2">Большой дом</p>
-        <p class="block__footer-content_2">Двухэтажный дом</p>
-      </div>
-      <div class="subblock__footer">
-        <h5 class="block__footer-subtitles">Бронирование</h5>
-        <p class="block__footer-content_2">Оформление</p>
-        <p class="block__footer-content_2">Оплата</p>
-      </div>
-      <div class="subblock__footer">
-        <h5 class="block__footer-subtitles">Контакты</h5>
-        <address class="block__footer-content_2">
-          <a class="subblock__footer">8-800-555-35-35</a>
-          <br /><a class="subblock__footer">email@yandex.ru</a>
-          <br>Деревня Кимжа, </br>Архангельская область</p>
-        </address>
-      </div>
-    </div>
-      </div>
-    </div>
-  </footer>
 </html>
